bk_ida/gccida/c0/split_2
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50505:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50506:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2e = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50527:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50540:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( v33 = true_regnum( recog_data_0.operand[0]), v33 != true_regnum( recog_data_0.operand[1])) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50540:71: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( v33 = true_regnum( recog_data_0.operand[0]), v33 != true_regnum( recog_data_0.operand[1])) ) 
                                                                      ^~~~~~~~~~~~
                                                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50546:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_883( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50548:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50561:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] != 61 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50562:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_881( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50565:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] != 61 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50566:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| recog_data_0.operand[1]->fld[0].rtint >= 8u 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50567:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( recog_data_0.operand[1]->fld[0].rtint < 0x25u || recog_data_0.operand[1]->fld[0].rtint > 0x2Cu) ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50567:55: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( recog_data_0.operand[1]->fld[0].rtint < 0x25u || recog_data_0.operand[1]->fld[0].rtint > 0x2Cu) ) 
                                                      ^~~~~~~~~~~~
                                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50572:42: error: use of undeclared identifier 'recog_data_0'
else if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] != 61 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50573:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| recog_data_0.operand[1]->fld[0].rtint >= 4u ) 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50580:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[0] != 61 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50581:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| recog_data_0.operand[0]->fld[0].rtint >= 8u 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50582:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( recog_data_0.operand[0]->fld[0].rtint < 0x25u || recog_data_0.operand[0]->fld[0].rtint > 0x2Cu) ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/insn-recog.c:50582:55: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( recog_data_0.operand[0]->fld[0].rtint < 0x25u || recog_data_0.operand[0]->fld[0].rtint > 0x2Cu) ) 
                                                      ^~~~~~~~~~~~
                                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_2/src/obj/insn-recog.o] Error 1
